--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="wrapper">
       <header>
         <h1>U-tad</h1>
-        <p>Data Science</p>
-
+        <p style="font-size:1.5em;">Máster en Data Science</p>
+        <p style="display: flex;flex-flow: row nowrap;justify-content: center;"><img src="https://avatars0.githubusercontent.com/u/3079545?v=3&u=91bbaa55351e3f61fac582e0b94fb879de6d01c7&s=140" alt="avatar_xavi783"></p>
         <p class="view"><a href="https://github.com/xavi783/u-tad">View the Project on GitHub <small>xavi783/u-tad</small></a></p>
-        
+
       </header>
       <section>
         <h3>
@@ -33,8 +33,7 @@
 <p>A continuación adjuntamos los links a los distintos módulos:</p>
 
 <ul>
-<li>Módulo 10: Análisis Estadístico
-
+<li><b>Módulo 10:</b> <i>Análisis Estadístico</i>
 <ul>
 <li><a href="/u-tad/modulos/10/Enunciado.pdf">Enunciado</a></li>
 <li><a href="/u-tad/modulos/10/analisis_estadistico.html">Solución</a></li>
