--- a/modulos/10/analisis_estadistico.html
+++ b/modulos/10/analisis_estadistico.html
@@ -1680,6 +1680,15 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><p id="start"></p><a href="https://xavi783.github.io/u-tad"><img src="https://xavi783.github.io/u-tad/images/SVG/home.svg" alt="Home"></a></p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="analisis-estad-stico">Analisis Estadístico</h1>
 <h3 id="por-javier-serrano">Por: Javier Serrano</h3>
 <p>El objetivo de este análisis es obtener una regresión lineal, de un cruce de divisas a partir de las series de índices y tipos asociados a ambas divisas*.</p>
@@ -10191,6 +10200,15 @@ VDXLrnhh2LbtGgAAAABJRU5ErkJggg==
 <li>Ampliar el espacio de features local</li>
 </ul>
 <p>Además, también podemos utilizar el paquete <a href="http://scikit-learn.org/stable/">sklearns</a> para construir regresiones y probar mejor el ajuste a nuevos DATOS.</p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a href="#start"><img src="https://xavi783.github.io/u-tad/images/SVG/arrow-up.svg" alt="Up"></a></p>
 </div>
 </div>
 </div>
