--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
 <ul>
 <li><b>Módulo 10:</b> <i>Análisis Estadístico</i>
 <ul>
-<li><a href="/u-tad/modulos/10/Enunciado.pdf">Enunciado</a></li>
+<li><a href="/u-tad/modulos/10/PracticaAprendizajeSupervisado.pdf">Enunciado</a></li>
 <li><a href="/u-tad/modulos/10/analisis_estadistico.html">Solución</a></li>
+</ul>
+</li>
+<li><b>Módulo 12:</b> <i>Aprendizaje Supervisado</i>
+<ul>
+<li><a href="/u-tad/modulos/12/Enunciado.pdf">Enunciado</a></li>
+<li><a href="/u-tad/modulos/12/Practica12.html">Solución</a></li>
 </ul>
 </li>
 </ul>
