--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <ul>
 <li><a href="/u-tad/modulos/12/Enunciado.pdf">Enunciado</a></li>
 <li><a href="/u-tad/modulos/12/Practica12.html">Solución</a></li>
+<li><a href="/u-tad/modulos/12/submission.csv">Submission</a></li>
 </ul>
 </li>
 </ul>
